--- a/index2.html
+++ b/index2.html
@@ -31,18 +31,11 @@
         padding: 10px;
       }
     </style>
-    <h1 style="background-color: rgb(100, 136, 197)">
-      World Coding Entertainment
+    <h1 style="background-color: rgb(100, 136, 197); text-align: center">
+      About Me
     </h1>
-    <p style="font-size: 160%">
-      Melvin vs. Bryan: The Ultimate Programming Battle
-    </p>
-    <p>
-      World Wrestling Entertainment, Inc., commonly shortened to its trade name
-      WWE, is an American professional wrestling promotion. A global integrated
-      media and entertainment company, WWE has also branched out into other
-      fields, including film, American football, and various other business
-      ventures.
+    <p style="font-size: 160%; text-align: center">
+      Melvin Joseph: Scholar Living in Norris House
     </p>
     <div id="root"></div>
     <script
@@ -50,5 +43,41 @@
       src="../resources/legacy/host/libs/json2xml.min.js"
     ></script>
     <script type="text/javascript" src="index.js"></script>
+  </body>
+</html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Custom Search-Bar</title>
+    <style>
+      body {
+        background-image: linear-gradient(
+          to left,
+          rgb(250, 250, 250),
+          rgb(19, 23, 19)
+        );
+        color: rgb(0, 0, 0);
+      }
+    </style>
+  </head>
+  <button
+    type="button"
+    onclick="location.href='https://127.0.0.1:5500/index3.html';"
+  >
+    Click to Access World Coding Entertainment
+  </button>
+  <button
+    type="button"
+    onclick="location.href='https://127.0.0.1:5500/index4.html';"
+  >
+    Click to Access World Coding Entertainment
+  </button>
+  <body>
+    <h1 style="text-align: center">Learn More About Anything</h1>
+    <script
+      async
+      src="https://cse.google.com/cse.js?cx=007019498718139788174:amtiepdpgeg"
+    ></script>
+    <div class="gcse-search"></div>
   </body>
 </html>
