--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       onclick="location.href='http://127.0.0.1:5500/index2.html';"
     >
       Click to Access Melvin
-      <!-- comment -->
+      <!-- comment 2 -->
     </button>
 
     <div id="root"></div>
