added comments and fixed links

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link href="clean.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- this is the page from which you can access my website -->
     <button
       type="button"
       onclick="location.href='http://127.0.0.1:5500/index2.html';"
     >
       Click to Access Melvin
-      <!-- comment 2 -->
     </button>
 
     <div id="root"></div>
