--- a/index2.html
+++ b/index2.html
@@ -13,8 +13,11 @@
     <link href="clean.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="border.css" />
+    <a href="index3.html"><button>Background</button></a>
+    <a href="index4.html"><button>Interests</button></a>
   </head>
   <body>
+    <!-- this page is my landing page where you can learn more about me and about anything (through google search) -->
     <style>
       body {
         background-color: rgb(0, 0, 0);
@@ -51,27 +54,11 @@
     <title>Custom Search-Bar</title>
     <style>
       body {
-        background-image: linear-gradient(
-          to left,
-          rgb(0, 0, 0),
-          rgb(0, 0, 0)
-        );
+        background-image: linear-gradient(to left, rgb(0, 0, 0), rgb(0, 0, 0));
         color: rgb(0, 0, 0);
       }
     </style>
   </head>
-  <button
-    type="button"
-    onclick="location.href='https://127.0.0.1:5500/index3.html';"
-  >
-    Click to Access World Coding Entertainment
-  </button>
-  <button
-    type="button"
-    onclick="location.href='https://127.0.0.1:5500/index4.html';"
-  >
-    Click to Access World Coding Entertainment
-  </button>
   <body>
     <h1 style="text-align: center">Learn More About Anything</h1>
     <script
