--- a/index3.html
+++ b/index3.html
@@ -13,20 +13,13 @@
     <link href="clean.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="border.css" />
-    <button
-      type="button"
-      onclick="location.href='https://127.0.0.1:5500/index2.html';"
-    >
-      Home
-    </button>
-    <button
-      type="button"
-      onclick="location.href='https://127.0.0.1:5500/index4.html';"
-    >
+  <a href="index2.html"><button>Home</button></a>
+  <a href="index4.html"><button>Interests</button></a>
       Interests
     </button>
   </head>
   <body>
+    <!-- this page is about my geographical and educational background -->
     <style>
       body {
         background-color: rgb(0, 0, 0);
@@ -67,7 +60,7 @@
     <img
       src="https://img1.10bestmedia.com/Images/Photos/383410/houseboats-in-kottayam-2-438_54_990x660.jpg"
       alt="10best.com"
-      style="width: 600px; height: 400;"
+      style="width: 600px; height: 400"
     />
   </div>
 </html>
