--- a/index4.html
+++ b/index4.html
@@ -14,20 +14,11 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="border.css" />
     <html>
-  <button
-    type="button"
-    onclick="location.href='https://127.0.0.1:5500/index3.html';"
-  >
-    Background
-  </button>
-  <button
-    type="button"
-    onclick="location.href='https://127.0.0.1:5500/index2.html';"
-  >
-    Home
-  </button>
+      <a href="index2.html"><button>Home</button></a>
+      <a href="index3.html"><button>Background</button></a>
   </head>
   <body>
+    <!-- this page is about my academic, athletic, and food-related interests -->
     <style>
       body {
         background-color: rgb(0, 0, 0);
