changed button for one page

--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
   </head>
   <body>
     <!-- this is the page from which you can access my website -->
-    <button
-      type="button"
-      onclick="location.href='http://127.0.0.1:5500/index2.html';"
-    >
-      Click to Access Melvin
-    </button>
-
+    <a href="index2.html"><button>Click to Access Melvin's Website</button></a>
     <div id="root"></div>
     <script
       type="text/javascript"
