--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,25 @@
     <link rel="stylesheet" href="border.css" />
     <a href="index3.html"><button>Background</button></a>
     <a href="index4.html"><button>Interests</button></a>
+    <button id="ASong" onClick="playPause()">
+      <audio src="Avicii - The Nights.webm" autoplay loop></audio>
+      Listen to My Favorite Song
+    </button>
+
+    <script>
+      var aud = document.getElementById("ASong").children[0];
+      var isPlaying = false;
+      aud.pause();
+
+      function playPause() {
+        if (isPlaying) {
+          aud.pause();
+        } else {
+          aud.play();
+        }
+        isPlaying = !isPlaying;
+      }
+    </script>
   </head>
   <body>
     <!-- this page is my landing page where you can learn more about me and about anything (through google search) -->
@@ -67,4 +86,5 @@
     ></script>
     <div class="gcse-search"></div>
   </body>
+  <!DOCTYPE html>
 </html>
